@@ -16,6 +16,8 @@
        (Stefan)
 - CHG: The context menu is disabled for ".svn"
        directories. (Stefan)
+- CHG: The balloon tooltips have now the standard
+       color of windows as the background. (Stefan)
 - ADD: Branch/Tag is available for single files
        too, not just folders. (Stefan)
 - ADD: Several new commands for the repository
